variables.Variables.scala.error
Erreur de compilation :
Variables:2: error: ';' expected but ',' found.
while(esuSurBiscuit == false) {avance(),nbPas = nbPas + 1}
                                       ^