variables.Variables.scala.code
var nbPas = 0
while(esuSurBiscuit == false) {avance(),nbPas = nbPas + 1}
prendBiscuit()